--- a/.github/workflows/prmerge-upload-crowdin.yml
+++ b/.github/workflows/prmerge-upload-crowdin.yml
@@ -16,6 +16,6 @@ jobs:
       env:
         CROWDIN_KEY: ${{ secrets.CROWDIN_API }}
       run: curl \
-        -F \"files[catty/Localizable.strings]=@src/Catty/Resources/Localization/en.lproj/Localizable.strings\" \
-        -F \"export_patterns[catty/Localizable.strings]=/catty/%osx_code%/%original_file_name%\" \
+        -F "files[catty/Localizable.strings]=@src/Catty/Resources/Localization/en.lproj/Localizable.strings" \
+        -F "export_patterns[catty/Localizable.strings]=/catty/%osx_code%/%original_file_name%" \
         https://api.crowdin.com/api/project/githubactionstest/update-file?key=$CROWDIN_KEY
