--- a/.github/workflows/prmerge-upload-crowdin.yml
+++ b/.github/workflows/prmerge-upload-crowdin.yml
@@ -15,7 +15,4 @@ jobs:
       if: github.event.pull_request.merged == true
       env:
         CROWDIN_KEY: ${{ secrets.CROWDIN_API }}
-      run: curl \
-        -F "files[catty/Localizable.strings]=@src/Catty/Resources/Localization/en.lproj/Localizable.strings" \
-        -F "export_patterns[catty/Localizable.strings]=/catty/%osx_code%/%original_file_name%" \
-        https://api.crowdin.com/api/project/githubactionstest/update-file?key=$CROWDIN_KEY
+      run: curl -F "files[catty/Localizable.strings]=@src/Catty/Resources/Localization/en.lproj/Localizable.strings" -F "export_patterns[catty/Localizable.strings]=/catty/%osx_code%/%original_file_name%" https://api.crowdin.com/api/project/githubactionstest/update-file?key=$CROWDIN_KEY
