--- a/.github/workflows/swiftlint.yml
+++ b/.github/workflows/swiftlint.yml
@@ -3,7 +3,6 @@ name: swiftlint
 on:
   pull_request:
     paths:
-      - '--config RunScripts/.swiftlint.yml'
       - '**/*.swift'
 
 jobs:
@@ -11,13 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: GitHub Action for SwiftLint
-        uses: norio-nomura/action-swiftlint@3.1.0
-      - name: GitHub Action for SwiftLint with --strict
-        uses: norio-nomura/action-swiftlint@3.1.0
-        with:
-          args: --strict
       - name: GitHub Action for SwiftLint (only files changed in the PR)
         uses: norio-nomura/action-swiftlint@3.1.0
+        with:
+          args: --config "src/RunScripts/.swiftlint.yml"
         env:
           DIFF_BASE: ${{ github.base_ref }}
