--- a/.github/workflows/swiftlint.yml
+++ b/.github/workflows/swiftlint.yml
@@ -13,6 +13,6 @@ jobs:
       - name: GitHub Action for SwiftLint (only files changed in the PR)
         uses: norio-nomura/action-swiftlint@3.1.0
         with:
-          args: --config "src/RunScripts/.swiftlint.yml"
+          args: --config "src/RunScripts/.swiftlint.yml" --strict
         env:
           DIFF_BASE: ${{ github.base_ref }}
