--- a/.github/boring-cyborg.yml
+++ b/.github/boring-cyborg.yml
@@ -5,7 +5,7 @@ firstPRMergeComment: >
   Awesome work, congrats on your first merged pull request!
 
 verifyTitles:
-  titleRegexp: ^\[CATTY-[0-9]{3,4}\].*$|^\[AIRFLOW-XXXX\].*$
+  titleRegexp: ^CATTY-[0-9]{3,4} .+$
   alwaysUsePrTitle: false
   validateEitherPrOrSingleCommitTitle: false
   statusTitle: "Ticket validator"
