--- a/.github/boring-cyborg.yml
+++ b/.github/boring-cyborg.yml
@@ -8,4 +8,5 @@ verifyTitles:
   titleRegexp: ^CATTY-[0-9]{3,4} .+$
   alwaysUsePrTitle: false
   validateEitherPrOrSingleCommitTitle: false
+  statusTitle: "${type} validator"
   failureMessage: "Invalid ${type}. Expected: ${regex}. Actual: ${title}. Please correct message."
