--- a/.github/jira-workflow-integration.yml
+++ b/.github/jira-workflow-integration.yml
@@ -1,2 +1,6 @@
 jira:
-  url: 'https://jira.catrob.at'
+    url: 'https://jira.catrob.at'
+    state: 'Merged'
+    
+pull_requests:
+    regular_expression: '(CATTY-[0-9]{2,3}) .*'
