--- a/.github/jira-workflow-integration.yml
+++ b/.github/jira-workflow-integration.yml
@@ -3,7 +3,7 @@ jira:
   status: 'Merged'
     
 pull_request_title_check:
-  regular_expression: '(CATROID-[0-9]{1,3}) .*'
+  regular_expression: '((CATTY|JENKINS)-[0-9]{1,3}) .*'
   
 status_check:
   label: 'PO Review required'
