--- a/.github/jira-workflow-integration.yml
+++ b/.github/jira-workflow-integration.yml
@@ -7,3 +7,4 @@ pull_request_title_check:
   
 status_check:
   label: 'PO Review required'
+  target_url: 'https://jira-test.catrob.at/browse/{issue}'
