--- a/.github/jira-workflow-integration.yml
+++ b/.github/jira-workflow-integration.yml
@@ -8,3 +8,7 @@ pull_request_title_check:
 status_check:
   label: 'PO Review required'
   target_url: 'https://jira-test.catrob.at/browse/{issue}'
+
+  pending:
+    title: '<a href="#">Jira ticket</a> is still in invalid workflow status'
+    description: 'Expected workflow status: `{status}`'
