--- a/.github/workflows/swiftlint.yml
+++ b/.github/workflows/swiftlint.yml
@@ -8,9 +8,12 @@ on:
 jobs:
   SwiftLint:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: src
     steps:
       - uses: actions/checkout@v1
       - name: GitHub Action for SwiftLint
         uses: norio-nomura/action-swiftlint@3.1.0
         with:
-          args: --path src --config RunScripts/.swiftlint.yml --strict
+          args: --config .swiftlint.yml --strict
